# skyward

./: .gitignore  404.html  PLANNED_PROVIDERS.md  PLANS-hyperstack.md  PLANS-lambda.md  PLANS-tensordock.md  PLANS-thunder.md  README.md  ROADMAP.md  Taskfile.yml  index.html  llms-full.txt  mkdocs.yml  objects.inv  pyproject.toml  sample.py  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: base-image.yml  pages.yml  publish.yml  python-package.yml  tests.yml  update-catalog.yml
.playground/: 00_sample.py  02_parallel_execution.py  06_data_sharding.py  14_distributed_scikit_grid_search.py  15_concurrency.py  16_joblib_concurrency.py  18_multipool.py  21_custom_callbacks.py  22_vastai_overlay.py  23_distributed_collections.py  26_torch_cpu.py  27_streaming_gather.py  28_cpu_intensive_work.py  29_docker_local.py  30_flax_minigpt.py  32_pandas_roundtrip.py  35_nvidia_mps.py  39_distributed_fsdp_huggingface.py  40_fsdp_torch_only.py
.playground/28-named-pool/: main.py
accelerators/: index.html
architecture/: index.html
choosing-a-provider/: index.html
cli/: index.html
compare/: index.html
concepts/: index.html
data/: accelerators.json
distributed-collections/: index.html
distributed-training/: index.html
docker/: Dockerfile.base
docs/: accelerators.md  api-reference.md  architecture.md  choosing-a-provider.md  cli.md  compare.md  concepts.md  distributed-collections.md  distributed-training.md  examples.md  faq.md  getting-started.md  hpc.md  index.md  integrations.md  llms.txt  providers.md  provision-controllers.md  sky-computing.md  troubleshooting.md  volumes.md  why-asyncio.md
docs/catalog/: accelerators.json  metadata.json  providers.json  specs.json
docs/guides/: broadcast.md  cuml-acceleration.md  data-sharding.md  fractional-gpus.md  fsdp-huggingface.md  hello-skyward.md  huggingface-finetuning.md  joblib-concurrency.md  keras-training.md  local-containers.md  microgpt-distributed.md  multi-provider.md  nvidia-mig.md  parallel-execution.md  pytorch-distributed.md  s3-volumes.md  scikit-grid-search.md  standalone-workers.md  streaming.md  torch-model-roundtrip.md  using-accelerators.md  worker-executors.md
docs/integrations/: index.md  joblib.md
docs/plans/: 2025-02-04-distributed-collections-design.md  2025-02-04-distributed-collections-plan.md  2026-02-04-runpod-provider-design.md  2026-02-04-runpod-provider.md  ray-migration.md
docs/plugins/: accelerate.md  cuml.md  huggingface.md  index.md  jax.md  joblib.md  keras.md  mig.md  mps.md  sklearn.md  torch.md
docs/providers/: aws.md  digital_ocean.md  vastai.md  verda.md
docs/reference/: accelerators.md  config.md  distributed.md  events.md  integrations.md  pool.md  runtime.md
examples/: 00_sample.py  01_hello.py  02_parallel_execution.py  03_gpu_accelerators.py  05_broadcast.py  06_data_sharding.py  07_cluster_coordination.py  08_s3_volumes.py  09_event_monitoring.py  0_providers.py  10_pytorch_distributed.py  11_keras_training.py  12_huggingface_finetuning.py  13_multi_pool.py  14_distributed_scikit_grid_search.py  14_grid_search.py  15_concurrency.py  16_joblib_concurrency.py  17_executor.py  18_multipool.py  19_executor.py  1_hello.py  20_disk_size.py  20_progress_bars.py  20_volumes.py  21_custom_callbacks.py  22_vastai_overlay.py  23_distributed_collections.py  24_distributed_jax_mnist.py  26_torch_cpu.py  27_streaming_gather.py  28_cpu_intensive_work.py  29_docker_local.py  2_parallel_execution.py  30_flax_minigpt.py  30_jax_microgpt.py  31_gcp_tpu.py  31_streaming.py  32_pandas_roundtrip.py  33_autoscaling.py  (+16 more)
examples/25-simple-cluster/: main.py  pyproject.toml
examples/28-named-pool/: main.py  pyproject.toml  skyward.toml
examples/guides/: 01_hello_skyward.py  02_parallel_execution.py  03_broadcast.py  04_gpu_accelerators.py  05_data_sharding.py  06_pytorch_distributed.py  07_keras_training.py  08_huggingface_finetuning.py  09_scikit_grid_search.py  10_joblib_concurrency.py  11_local_containers.py  12_multi_provider.py  13_streaming.py  14_worker_executors.py  (+6 more)
getting-started/: index.html
guides/: 01_hello_skyward.py  04_gpu_accelerators.py  05_data_sharding.py  07_keras_training.py  08_huggingface_finetuning.py  09_scikit_grid_search.py  11_local_containers.py  12_multi_provider.py  16_cuml_acceleration.py  17_s3_volumes.py  20_fractional_gpus.py  21_standalone_workers.py
hpc/: index.html
integrations/: index.html
javascripts/: gpu-compare.js
plugins/: index.html
providers/: index.html
provision-controllers/: index.html
scripts/: fetch_catalog.py
search/: search_index.json
sky-computing/: index.html
skyward/: __init__.py  __init__.pyi  _context.py  _pool_decorator.py  acc.py  accelerator.py  app.py  bus.py  cache.py  callback.py  casty_worker.py  cluster.py  conc.py  config.py  constants.py  containers.py  cost.py  data.py  distributed.py  events.py  exceptions.py  executor.py  facade.py  image.py  job_runner.py  logging.py  messages.py  metrics.py  monitors.py  multi_pool.py  node.py  orchestrator.py  output.py  pending.py  pool.py  pool_compute.py  pricing.py  retry.py  runtime.py  selection.py  (+8 more)
stylesheets/: extra.css  gpu-compare.css
tests/: conftest.py  test_app.py  test_async.py  test_broadcast.py  test_compute.py  test_config.py  test_containers.py  test_disk_gb.py  test_distributed.py  test_function.py  test_health_e2e.py  test_http.py  test_image.py  test_integration.py  test_integrations.py  test_node_recovery.py  test_nodes.py  test_output_control.py  test_pandas.py  test_parallel.py  test_pool_lifecycle.py  test_provider_default_options.py  test_provider_sanity.py  test_provision_retry.py  test_reattach_e2e.py  test_resize_e2e.py  test_runtime.py  test_scale_to_zero_e2e.py  test_serialization.py  test_server_endpoints.py  test_session_e2e.py  test_ssh_multiplexing.py  test_ssh_reconnect.py  test_standalone_workers.py  test_storage.py  test_streaming.py  test_volume_client.py  test_volumes.py
volumes/: index.html
why-asyncio/: index.html
(+785 files in other folders)
