[project]
name = "skyward"
version = "0.1.0"
description = "Execute Python functions on cloud compute with a simple decorator"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Gabriel Francisco" }
]
keywords = ["cloud", "distributed", "gpu", "serverless", "compute"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "cloudpickle>=3.1.2",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "typer>=0.15.1",
    "ray[default]>=2.9.0",
    "tqdm>=4.67.1",
    "tenacity>=8.0.0",
    "psutil>=5.9.0",
    "loguru>=0.7.3",
    "rich>=14.2.0",
    "paramiko>=4.0.0",
    "blinker>=1.9.0",
    "injector>=0.23.0",
    "asyncssh>=2.14.0",
    "casty>=0.2.0",
]

[project.optional-dependencies]
# Provider SDKs - only needed on client side
aws = [
    "aioboto3>=13.0.0",
    "boto3-stubs[s3,ec2,ecr,sts,iam]>=1.35.0",
]
digitalocean = [
    "pydo>=0.22.0",
]
verda = [
    "verda>=1.0.0",
]
vastai = []
gcp = [
    "google-cloud-run>=0.10",
    "google-cloud-batch>=0.17",
]
azure = [
    "azure-mgmt-containerinstance>=10.0",
]
providers = ["skyward[aws,digitalocean,verda,vastai,gcp,azure]"]
# ML frameworks
pytorch = [
    "torch==2.8.0",
    "torchvision==0.23.0",
]
huggingface = [
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
]
all = ["skyward[providers,pytorch,huggingface]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "torch>=2.8.0",
    "jax>=0.8.1",
    "keras>=3.12.0",
    "boto3-stubs[ec2,ecr,iam,s3,ssm,sts]>=1.42.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skyward"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = [
    "ANN401",  # Allow Any for serialization functions
    "UP046",   # Keep Generic[T] style for broader IDE support
    "UP047",   # Keep Generic function style for broader IDE support
    "N802",    # Allow PascalCase for constructor-style functions
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (require Docker)",
    "ec2: marks tests as EC2 integration tests (require AWS credentials)",
]

[dependency-groups]
dev = [
    "jax>=0.8.2",
    "keras>=3.13.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "vulture>=2.14",
]
