[project]
name = "skyward"
dynamic = ["version"]
description = "Execute Python functions on cloud compute with a simple decorator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Gabriel Francisco"}]
keywords = ["cloud", "distributed", "gpu", "serverless", "compute"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "cloudpickle>=3.1.2",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "casty>=0.7.0",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
    "loguru>=0.7.3",
    "rich>=14.2.0",
    "blinker>=1.9.0",
    "injector>=0.23.0",
    "asyncssh>=2.14.0",
]

[project.optional-dependencies]
# Provider SDKs - only needed on client side
aws = [
    "aioboto3>=13.0.0",
    "boto3-stubs[s3,ec2,ecr,sts,iam]>=1.35.0",
]
verda = [
    "verda>=1.0.0",
]
vastai = []
gcp = [
    "google-cloud-run>=0.10",
    "google-cloud-batch>=0.17",
]
azure = [
    "azure-mgmt-containerinstance>=10.0",
]
providers = ["skyward[aws,verda,vastai,gcp,azure]"]
# ML frameworks
pytorch = [
    "torch==2.8.0",
    "torchvision==0.23.0",
]
huggingface = [
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
]
all = ["skyward[providers,pytorch,huggingface]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "torch>=2.8.0",
    "jax>=0.8.1",
    "keras>=3.12.0",
    "boto3-stubs[ec2,ecr,iam,s3,ssm,sts]>=1.42.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["skyward"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = [
    "ANN401",  # Allow Any for serialization functions
    "UP046",   # Keep Generic[T] style for broader IDE support
    "UP047",   # Keep Generic function style for broader IDE support
    "N802",    # Allow PascalCase for constructor-style functions
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-m 'not integration and not ec2' --durations=0 -n auto"
markers = [
    "integration: marks tests as integration tests (require Docker)",
    "ec2: marks tests as EC2 integration tests (require AWS credentials)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "pyright>=1.1",
    "ruff>=0.9",
    "jax>=0.8.2",
    "keras>=3.13.0",
    "scikit-learn>=1.8.0",
]
