[project]
name = "skyward"
dynamic = ["version"]
description = "Execute Python functions on cloud compute with a simple decorator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Gabriel Francisco"}]
keywords = ["cloud", "distributed", "gpu", "serverless", "compute"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "cloudpickle>=3.1.2",
    "pydantic>=2.12.5",
    "casty>=0.18.0",
    "rich>=14.3.2",
    "asyncssh>=2.22.0",
    "aiohttp>=3.13.3",
]

[project.optional-dependencies]
# Provider SDKs - only needed on client side
aws = [
    "aioboto3>=13.0.0",
    "boto3-stubs[s3,ec2,ecr,sts,iam]>=1.35.0",
]
verda = [
    "verda>=1.0.0",
]
vastai = []
gcp = [
    "google-cloud-compute>=1.20.0",
    "google-auth>=2.0.0",
    "google-cloud-tpu>=1.25.0",
]
azure = [
    "azure-mgmt-containerinstance>=10.0",
]
providers = ["skyward[aws,verda,vastai,gcp,azure]"]
# ML frameworks
pytorch = [
    "torch==2.8.0",
    "torchvision==0.23.0",
]
huggingface = [
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
]
all = ["skyward[providers,pytorch,huggingface]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "torch>=2.8.0",
    "jax>=0.8.1",
    "keras>=3.12.0",
    "boto3-stubs[ec2,ecr,iam,s3,ssm,sts]>=1.42.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "skyward/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["skyward"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["skyward/_version.py", "metrics_prototype.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = [
    "ANN401",  # Allow Any for serialization functions
    "UP046",   # Keep Generic[T] style for broader IDE support
    "UP047",   # Keep Generic function style for broader IDE support
    "N802",    # Allow PascalCase for constructor-style functions
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"examples/**" = ["ANN"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["skyward", "tests"]
reportMissingImports = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--durations=0 --dist loadgroup -s --log-cli-level=INFO -m 'not sanity and not integration'"
timeout_func_only = true
markers = [
    "e2e: end-to-end tests requiring container runtime",
    "slow: tests that take >10s",
    "integration: marks tests as integration tests (require Docker)",
    "sanity: provider sanity tests (real cloud, real GPUs)",
    "aws: AWS provider tests",
    "runpod: RunPod provider tests",
    "vastai: VastAI provider tests",
    "verda: Verda provider tests",
    "gcp: GCP provider tests",
]

[dependency-groups]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "pyright>=1.1",
    "ruff>=0.9",
    "jax>=0.8.2",
    "keras>=3.13.0",
    "scikit-learn>=1.8.0",
    "pytest-timeout>=2.4.0",
    "textual>=7.5.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pymdown-extensions>=10.20.1",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.2",
    "plotext>=5.3.2",
]
